<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.ichsanalfian.elog_pdam.ui.main.buyer.ui.home.BerandaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.ichsanalfian.elog_pdam.ui.main.buyer.ui.keranjang.KeranjangFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_keranjang" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.ichsanalfian.elog_pdam.ui.main.buyer.ui.riwayat.RiwayatFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_riwayat" />
</navigation>