<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.seller.verif.VerifActivity">

    <TextView
        android:id="@+id/belum_verif"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginTop="252dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/belum_verif"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/belum_verif"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/belum_verif" />

    <TextView
        android:id="@+id/rejected"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rejected"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/pending"
        android:layout_width="326dp"
        android:layout_height="94dp"
        android:layout_gravity="center"
        android:layout_marginBottom="312dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/pending"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVerifikasiLgi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/belum_verif"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/verify_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alasan" />

    <TextView
        android:id="@+id/alasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Alasan:"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejected" />

</androidx.constraintlayout.widget.ConstraintLayout>
