<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <EditText
        android:id="@+id/ETusername"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:layout_marginBottom="316dp"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/username"
        android:textColor="@color/abu"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:layout_marginBottom="244dp"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/abu"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/atasan2" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="159dp"
        android:layout_height="249dp"
        android:layout_marginBottom="364dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logoatasan" />

    <TextView
        android:id="@+id/TVsignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/abu"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETpassword" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_login"
        style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_gradient"
        android:clickable="true"
        app:backgroundTint="@color/biru"
        app:backgroundTintMode="add"
        app:fabCustomSize="@android:dimen/notification_large_icon_height"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toEndOf="@+id/TVsignIn"
        app:layout_constraintTop_toBottomOf="@+id/ETpassword"
        app:srcCompat="@drawable/right_arrow" />

    <TextView
        android:id="@+id/sign_up_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up_UL"
        android:textColor="@color/oren"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVsignIn" />

    <TextView
        android:id="@+id/lupa_sandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/lupa_kata_sandi"
        android:textColor="@color/oren"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVsignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>